Fix: comment text overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -300,3 +300,9 @@ textarea
         }
     }
 }
+
+pre
+{
+    white-space: pre-wrap;
+    word-break: break-word;
+}
